# browsli

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-02-browsli-interactive-tui-browser.md
docs/superpowers/specs/: 2026-06-02-browsli-interactive-tui-browser-design.md
src/browsli/: __init__.py  app.py  config.py  extractor.py  fetch.py  links.py  models.py  session.py  transformer.py
src/browsli/providers/: __init__.py  base.py  factory.py  litellm_provider.py  ollama_provider.py  openai_provider.py  tavily_provider.py
tests/: test_app_smoke.py  test_config.py  test_extractor.py  test_links.py  test_llm_providers.py  test_session.py  test_transformer.py
